fix($stylesheet): Center align Icon & Text columns

--- a/src/styles/_section_icon_and_text.scss
+++ b/src/styles/_section_icon_and_text.scss
@@ -11,6 +11,7 @@
 
 .text-icon__list {
   @include make-row(false);
+  @include justify-content(center);
 }
 
 .text-icon__list-item {
